# autostudio-embedded

./: Arduino_ESP32_Build_Fixes.md  CLAUDE.md  CMakeLists.txt  ESP32_Cross_Compilation_Issues.md  How_to_fix_MCP_toolinfo_issue.md  LICENSE  MCP Framework for LLM-Embedded Systems Integration.md  MCP Server Implementation Requirements for Embedded Systems.md  NOTICE  README.md  build.sh  driver_bridge_fixed.c  json_parser.c  logging.c  logging.h  main.cpp  mcp_os_core.h  self_contained_test  test_config.json  test_device_info.c  test_dynamic_tools.c  test_mocks.h
archive/: build.sh.bak  test_dynamic_tools.c.bak  tool_registry.c.bak
core/device/: actuator_manager.c  device_info.c  device_info.h  driver_manager.c  driver_manager.h  sensor_manager.c
core/device/bus_controllers/: i2c_controller.h
core/kernel/: config_system.c  event_system.c  event_system.h  memory_manager.c  task_scheduler.c  task_scheduler.h
core/mcp/: content.h  server.h  server_nocode.h
core/tool_system/: automation_engine.c  automation_engine.h  bytecode_interpreter.c  bytecode_interpreter.h  context_manager.c  context_manager.h  rule_interpreter.h  tool_handler.c  tool_registry.c  tool_registry.h
docs/: ARDUINO_ESP32_BUILD_FIXES.md  ARDUINO_ESP32_CHANGES_SUMMARY.md  BUILD_FIXES.md  DRIVER_BRIDGE.md  MCP Server Implementation Requirements for Embedded Systems.md  MCP_CONFIGURATION.md  MCP_LOGGING.md  MCP_TOOLRESULT_COMPATIBILITY.md  ORGANIZATION.md  PLATFORM_GUIDE.md  TRANSPORT_IMPLEMENTATION.md
docs/examples/: bridge_example.c  bridge_mcp_examples.json  bytecode_config_example.c  bytecode_config_example.json  config_example.c  config_example.json  log_config_example.c  log_config_example.json  log_export_example.c  no_code_setup_sequence.json
drivers/sensors/humidity/: dht22.h
drivers/sensors/motion/: pir.h
scripts/: build.sh  build_arduino.sh  build_arduino_fixed.sh  build_arduino_universal.sh  build_esp32.sh  build_fix.sh  build_host.sh  build_mbed.sh  build_rpi.sh  build_simple.sh  clean.sh  final_build.sh  final_fixed_build.sh  test.sh
self_contained_test.dSYM/Contents/: Info.plist
src/: main.cpp
src/core/device/: actuator_manager.c  actuator_manager.h  device_info.c  device_info.h  driver_bridge.c  driver_bridge.h  driver_bridge_tools.c  driver_bytecode.c  driver_bytecode.h  driver_dynamic.c  driver_dynamic.h  driver_manager.c  js_runtime.c  sensor_manager.c  sensor_manager.h
src/core/kernel/: config_system.c  config_system.h  event_system.c  event_system.h  memory_manager.c  memory_manager.h  task_scheduler.c
src/core/mcp/: auth_manager.c  content.c  content.h  content_api_helpers.c  content_api_helpers.h  content_helpers_arduino.cpp  protocol_handler.h  server.c  server.h  server_defs.h  server_init.c  server_nocode.h  server_stub.c  server_utils.c  server_utils.h  transport.c
src/core/tool_system/: automation_engine.c  bytecode_config.c  bytecode_interpreter.c  bytecode_mem.c  bytecode_mem.h  context_manager.c  context_manager.h  rule_interpreter.c  tool_handler.c  tool_handler.h  tool_helper.c  tool_helper_arduino.cpp  tool_info.h  tool_registry.c  tool_registry.h
src/hal/arduino/: hal_arduino.c  hal_arduino.h  mcp_arduino.c  mcp_arduino_config.c
src/hal/esp32/: hal_esp32.c  hal_esp32.h  mcp_esp32.c  mcp_esp32.h  mcp_esp32_config.c
src/json/: json_helpers.c  json_helpers.h  json_parser.c  json_parser.h
src/system/: logging.c  logging.h  logging_arduino.cpp  logging_stub.c  mcp_os_core.h  mcp_system.c  mcp_time_arduino.cpp  persistent_storage.c  persistent_storage_stub.c
src/test/: json_device_info_mock.c  json_mock.c  test_device_info.c  test_dynamic_tools.c  test_json_mock.c
src/util/: build_config.h  build_fix.c  build_fix.h  platform_compatibility.c  platform_compatibility.h
tests/: build_config_json_test.sh  build_mcp_config_test.sh  build_platform_test.sh  build_simple_test.sh  build_test.sh  config_test.c  logging_stub.c  mcp_config_test.c  self_contained_test.c  test_config_json.c  test_config_simple.c  test_config_system.c  test_mcp_config_simple.c  test_platform_config.c
(+22 files in other folders)
